--- a/FA19-BCS-B/pugdemo/package.json
+++ b/FA19-BCS-B/pugdemo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-generated",
+  "name": "pugdemo",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
